# findit-client

./: requirements.txt  setup.cfg
findit_client/: __init__.py  base.py  exceptions.py  findit_client.py
findit_client/api/: __init__.py  api_requests.py  conextions.py  const.py  method_search.py  method_tagger.py  method_util.py
findit_client/models/: __init__.py  builder.py  model_common.py  model_search.py  model_tagger.py
findit_client/util/: __init__.py  image.py  pixiv.py  validations.py  zip_file.py
test/: test_findit_client.py
