[metadata]
name = findit_client
version = attr: findit_client.__version__
author = Andres
author_email = andres@arz.ai
description = Client for the api findit.arz.ai used in findit.moe
long_description = file: README.md
long_description_content_type = text/markdown
keywords = anime, image, search, engine, client, findit, vector, reverse-search, reverse
[options]
zip_safe = True
include_package_data = True
