[metadata]
name = findit_client
version = attr: findit_client.__version__
author = Andres
author_email = andres@arz.ai
description = Client for the api findit.arz.ai used in findit.moe
long_description = file: README.md
long_description_content_type = text/markdown
keywords = anime, image, search, engine, client, findit, vector, reverse-search, reverse

[options]
zip_safe = True
include_package_data = True
install_requires =
    aiohappyeyeballs==2.6.1
    aiohttp==3.11.17
    aiosignal==1.3.2
    annotated-types==0.7.0
    anyio==4.9.0
    ArZypher @ git+https://github.com/Andres77872/ArZypher.git@8636168c4af95b047af581b5db26af2b650d4b93
    attrs==25.3.0
    beautifulsoup4==4.13.4
    certifi==2025.1.31
    charset-normalizer==3.4.1
    frozenlist==1.6.0
    idna==3.10
    lxml==5.3.2
    multidict==6.4.3
    numpy==2.2.5
    opencv-python-headless==4.11.0.86
    pillow==11.2.1
    propcache==0.3.1
    pydantic==2.11.3
    pydantic_core==2.33.1
    requests==2.32.3
    sniffio==1.3.1
    soupsieve==2.6
    typing-inspection==0.4.0
    typing_extensions==4.13.2
    urllib3==2.4.0
    yarl==1.20.0